# kafka_prototype

./: README.md  Unbenanntes Diagramm.drawio  docker-compose.yaml  oauthflow.drawio  pyproject.toml
consumer/: Dockerfile  main.py
producer/: Dockerfile  main.py
